implemented the 0auth functionality with github 0auth system.
